<resources>
    <string name="app_name">Data Monitor</string>
    <string name="appwidget_text">Example</string>
    <string name="add_widget">Add widget</string>
    <string name="reset_time" translatable="false">%1$d/%2$d/%3$d %4$d:%5$d:00</string>
    <string name="widget_mobile_data_usage" translatable="false">%1$s %2$s</string>
    <string name="notification_mobile_data_usage">Mobile data: %1$s</string>
    <string name="notification_wifi_data_usage">Wi-Fi: %1$s</string>
    <string name="home_mobile_data_sent">%1$s\nSent</string>
    <string name="home_mobile_data_received">%1$s\nReceived</string>
    <string name="home_wifi_data_sent">%1$s\nSent</string>
    <string name="home_wifi_data_received">%1$s\nReceived</string>
    <string name="label_current_data_warning_trigger_level_limit_set">Current trigger level: %1$s%% (%2$s)</string>
    <string name="label_current_data_warning_trigger_level_limit_not_set">Current trigger level: %1$s%%</string>
    <string name="label_data_trigger_level">When %1$s%% of the data is used</string>
    <string name="hello_blank_fragment" translatable="false"></string>
    <string name="app_label_package_name">Package name: %1$s</string>
    <string name="app_label_uid">UID: %1$d</string>
    <string name="app_name_placeholder">App name</string>
    <string name="app_data_usage_placeholder">0 MB</string>
    <string name="label_sent">sent</string>
    <string name="label_received">received</string>
    <string name="action_open_app_settings">Open the app settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="title_app_data_usage_session">Select session</string>
    <string name="label_today">Today</string>
    <string name="label_yesterday">Yesterday</string>
    <string name="label_this_month">This month</string>
    <string name="label_last_month">Last month</string>
    <string name="label_this_year">This year</string>
    <string name="label_all_time">All time</string>
    <string name="title_app_data_usage_type">Select type</string>
    <string name="label_mobile_data">Mobile data</string>
    <string name="label_wifi">Wi-Fi</string>
    <string name="title_data_usage">Data usage</string>
    <string name="action_update">Update</string>
    <string name="data_remaining_placeholder">0.00 GB remaining</string>
    <string name="app_version_placeholder" translatable="false">v1.0</string>
    <string name="label_dev">With ❤ by Bitroid</string>
    <string name="label_loading_apps">Loading apps</string>
    <string name="label_loading">Loading…</string>
    <string name="label_app_data_usage_session_empty">No data available</string>
    <string name="label_want_to_contribute">Click here to find out how to contribute to Data Monitor.</string>
    <string name="setup_image_footer">Widgets and/or notification provide easy access to the amount of data used</string>
    <string name="heading_data_reset">Reset counter</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="heading_data_limit">Data limit</string>
    <string name="data_limit_placeholder" translatable="false">0.00</string>
    <string name="data_type_mb">MB</string>
    <string name="data_type_gb">GB</string>
    <string name="title_data_warning_trigger">Data warning trigger level</string>
    <string name="title_add_data_plan">Add data plan</string>
    <string name="title_refresh_interval">Select refresh interval</string>
    <string name="option_1_min">1 minute</string>
    <string name="option_2_min">2 minutes</string>
    <string name="option_5_min">5 minutes</string>
    <string name="option_10_min">10 minutes</string>
    <string name="option_15_min">15 minutes</string>
    <string name="title_widget_setup">Set up the widget</string>
    <string name="widget_setup_step_1">1. Touch and hold an empty space on your home screen.</string>
    <string name="widget_setup_step_2">2. Tap \"Widgets\".</string>
    <string name="widget_setup_step_3">3. Drag and drop the Data Monitor widget onto your home screen.</string>
    <string name="heading_data_usage_today">Today\'s data usage</string>
    <string name="action_add_data_plan_home">Add your data plan to start monitoring it</string>
    <string name="heading_week_overview">This week\'s overview</string>
    <string name="error_loading_overview">Could not load this week\'s overview.\nTry again later.</string>
    <string name="title_setup">Setup Data monitor</string>
    <string name="setup_widget">Set up the widget</string>
    <string name="setup_notification">Set up notifications</string>
    <string name="title_configure">Configure</string>
    <string name="setup_widget_title">Widget</string>
    <string name="setup_widget_refresh_interval">Widget refresh interval</string>
    <string name="refresh_interval_placeholder">1 minute</string>
    <string name="setup_show_remaining_data">Show info about remaining data</string>
    <string name="setup_refresh_widget">Refresh widget</string>
    <string name="refresh_widget_summary">Refresh the widget if it\'s facing any problem</string>
    <string name="settings_general">General</string>
    <string name="itsdrnoob">Dr.NooB</string>
    <string name="contributors">Contributors</string>
    <string name="itsdrnoob_summary"><![CDATA[Lead Developer and Designer]]></string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="dark_mode_summary">Turn on/off dark mode</string>
    <string name="settings_preferences">Preferences</string>
    <string name="settings_language">Language</string>
    <string name="language_summary">Change the app language</string>
    <string name="about">About</string>
    <string name="about_summary"><![CDATA[Source, help and more]]></string>
    <string name="license">License</string>
    <string name="contributors_summary">Those who are always there</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Buy us a coffee, maybe?</string>
    <string name="support_and_development">Support and development</string>
    <string name="github">GitHub</string>
    <string name="github_summary">View the source code</string>
    <string name="xda">XDA Thread</string>
    <string name="xda_summary"><![CDATA[FAQ, help and troubleshooting]]></string>
    <string name="report">Report bugs</string>
    <string name="report_summary">Report bugs or request features</string>
    <string name="label_translators">Translators</string>
    <string name="ygorigor_summary">Romanian</string>
    <string name="ygorigor" translatable="false">Igor Sorocean</string>
    <string name="johnsonran_summary">Simplified Chinese</string>
    <string name="johnsonran" translatable="false">JohnsonRan</string>
    <string name="cracky5322_summary">Traditional Chinese</string>
    <string name="cracky5322" translatable="false">Jia-Bin</string>
    <string name="louis_leblanc_summary">French</string>
    <string name="louis_leblanc" translatable="false">Louis Leblanc</string>
    <string name="hudaifa_abdullah_summary">Arabic</string>
    <string name="hudaifa_abdullah" translatable="false">Hudaifa Abdullah</string>
    <string name="holydemon" translatable="false">HolyDemon</string>
    <string name="holydemon_summary">Malayalam</string>
    <string name="liviogasp" translatable="false">Liviogasp</string>
    <string name="liviogasp_summary">Italian</string>
    <string name="comradekingu_summary">Translation support</string>
    <string name="comradekingu" translatable="false">Allan Nordhøy</string>
    <string name="label_telegram">Telegram</string>
    <string name="report_github_summary">Open a new issue on Github</string>
    <string name="report_telegram_summary">Send the crash report in Telegram support chat</string>
    <string name="report_mail_summary">Send the crash report in mail</string>
    <string name="label_mail">Mail</string>
    <string name="settings_diagnostics_server">Server</string>
    <string name="settings_download_server">Download server</string>
    <string name="settings_upload_server">Upload server</string>
    <string name="download_url_1_summary" translatable="false">http://speedtest.ftp.otenet.gr</string>
    <string name="upload_url_1_summary" translatable="false">https://www.azurespeed.com</string>
    <string name="comradekingu_translation_summary" translatable="false">Norwegian Bokmål</string>
    <string name="metezd_summary" translatable="false">Turkish</string>
    <string name="metezd" translatable="false">metezd</string>
    <string name="eUgEntOptIc44" translatable="false">Jean-Luc Tibaux</string>
    <string name="eUgEntOptIc44_summary" translatable="false">German, Italian, French</string>
    <string name="ersen0" translatable="false">Oğuz Ersen</string>
    <string name="ersen0_summary" translatable="false">Turkish</string>
    <string name="AxusWizix" translatable="false">Axus Wizix</string>
    <string name="AxusWizix_summary" translatable="false">Russian, Ukrainian, Russian</string>
    <string name="hectorgamer_summary" translatable="false">Portuguese</string>
    <string name="hector_gamer" translatable="false">Hector Gamer</string>
    <string name="BLENICeI_summary" translatable="false">Spanish</string>
    <string name="BLENICeI" translatable="false">BLENICeI</string>
    <string name="Igor_summary" translatable="false">Spanish</string>
    <string name="Igor" translatable="false">Igor</string>
    <string name="Denis_summary" translatable="false">Ukrainian</string>
    <string name="Denis" translatable="false">Denis</string>
    <string name="friedrich_summary" translatable="false">German</string>
    <string name="friedrich" translatable="false">Friedrich</string>
    <string name="helmut_summary" translatable="false">German</string>
    <string name="helmut" translatable="false">Helmut</string>
    <string name="kyoya_summary" translatable="false">Turkish</string>
    <string name="kyoya" translatable="false">Kyoya</string>
    <string name="paul_summary" translatable="false">German</string>
    <string name="paul" translatable="false">Paul</string>
    <string name="tobias_summary" translatable="false">German</string>
    <string name="tobias" translatable="false">Tobias</string>
    <string name="label_send_report">Send report via</string>
    <string name="Atalanttore_summary">German</string>
    <string name="Atalanttore">Ettore Atalan</string>
    <string name="gallegonovato_summary">Spanish</string>
    <string name="gallegonovato">gallegonovato</string>
    <string name="Kefir2105_summary">Ukrainian</string>
    <string name="Kefir2105">Kefir2105</string>
    <string name="rex07_summary">Arabic</string>
    <string name="rex07">Rex_sa</string>
    <string name="shailendramaurya_summary">Hindi, Bhojpuri</string>
    <string name="shailendramaurya">Shailendra Maurya</string>
    <string name="iqb4lsp_summary">Indonesian</string>
    <string name="iqb4lsp">iqb4lsp</string>
    <string name="Master2050_summary">Traditional Chinese, Portuguese, French, Norwegian Bokmål, Spanish, German, Romanian, Korean, Turkish, Simplified Chinese, Ukrainian, Hindi, Russian, Arabic</string>
    <string name="Master2050">Master2050</string>
    <string name="bonbonboi_summary">Arabic</string>
    <string name="bonbonboi">bonbonboi</string>
    <string name="MarongHappy_summary">Korean</string>
    <string name="MarongHappy">JungHee Lee</string>
    <string name="U1M450W_summary">Uzbek</string>
    <string name="U1M450W">U1M450W</string>
    <string name="wall_of_thanks">Wall of Thanks</string>
    <string name="app_contributors">App Contributors</string>
    <string name="wall_of_thanks_summary">A place to show our appreciation to the supporters of the app.</string>
    <string name="app_contributors_summary">A list of contributors who support the development of the app.</string>
</resources>