<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.drnoob.datamonitor.core.base.PreferenceCategory
        android:title="@string/support_and_development"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false">

        <com.drnoob.datamonitor.core.base.Preference
            android:key="itsdrnoob"
            android:summary="@string/itsdrnoob_summary"
            android:title="@string/itsdrnoob"
            app:icon="@drawable/itsdrnoob"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_itsdrnoob" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="comradekingu"
            android:summary="@string/comradekingu_summary"
            android:title="@string/comradekingu"
            app:icon="@drawable/comradekingu"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_comradekingu" />

        </com.drnoob.datamonitor.core.base.Preference>

    </com.drnoob.datamonitor.core.base.PreferenceCategory>

    <com.drnoob.datamonitor.core.base.PreferenceCategory
        android:title="@string/label_translators"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false">

        <com.drnoob.datamonitor.core.base.Preference
            android:key="ygorigor"
            android:summary="@string/ygorigor_summary"
            android:title="@string/ygorigor"
            app:icon="@drawable/ygorigor"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_ygorigor" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="johnsonran"
            android:summary="@string/johnsonran_summary"
            android:title="@string/johnsonran"
            app:icon="@drawable/johnsonran"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_johnsonran" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="cracky5322"
            android:summary="@string/cracky5322_summary"
            android:title="@string/cracky5322"
            app:icon="@drawable/cracky5322"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_cracky5322" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="louis_leblanc"
            android:summary="@string/louis_leblanc_summary"
            android:title="@string/louis_leblanc"
            app:icon="@drawable/ic_person">

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="hudaifa_abdullah"
            android:summary="@string/hudaifa_abdullah_summary"
            android:title="@string/hudaifa_abdullah"
            app:icon="@drawable/hudaifa_abdullah">

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="holydemon"
            android:summary="@string/holydemon_summary"
            android:title="@string/holydemon"
            app:icon="@drawable/holydemon">

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="liviogasp"
            android:summary="@string/liviogasp_summary"
            android:title="@string/liviogasp"
            app:icon="@drawable/ic_person">

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="comradekingu"
            android:summary="@string/comradekingu_translation_summary"
            android:title="@string/comradekingu"
            app:icon="@drawable/comradekingu"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_comradekingu" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="metezd"
            android:summary="@string/metezd_summary"
            android:title="@string/metezd"
            app:icon="@drawable/metezd"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_metezd" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="ersen0"
            android:summary="@string/ersen0_summary"
            android:title="@string/ersen0"
            app:icon="@drawable/ersen0"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_ersen0" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="eUgEntOptIc44"
            android:summary="@string/eUgEntOptIc44_summary"
            android:title="@string/eUgEntOptIc44"
            app:icon="@drawable/eugentoptic44"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_eUgEntOptIc44" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="AxusWizix"
            android:summary="@string/AxusWizix_summary"
            android:title="@string/AxusWizix"
            app:icon="@drawable/axuswizix"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_AxusWizix" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="hectorgamer"
            android:summary="@string/hectorgamer_summary"
            android:title="@string/hector_gamer"
            app:icon="@drawable/ic_person">

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="BLENICeI"
            android:summary="@string/BLENICeI_summary"
            android:title="@string/BLENICeI"
            app:icon="@drawable/ic_person">

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="Igor"
            android:summary="@string/Igor_summary"
            android:title="@string/Igor"
            app:icon="@drawable/ic_person">

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="Denis"
            android:summary="@string/Denis_summary"
            android:title="@string/Denis"
            app:icon="@drawable/ic_person">

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="Friedrich"
            android:summary="@string/friedrich_summary"
            android:title="@string/friedrich"
            app:icon="@drawable/ic_person">

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="Helmut"
            android:summary="@string/helmut_summary"
            android:title="@string/helmut"
            app:icon="@drawable/ic_person">

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="Kyoya"
            android:summary="@string/kyoya_summary"
            android:title="@string/kyoya"
            app:icon="@drawable/kyoya">

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="Paul"
            android:summary="@string/paul_summary"
            android:title="@string/paul"
            app:icon="@drawable/ic_person">

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="Tobias"
            android:summary="@string/tobias_summary"
            android:title="@string/tobias"
            app:icon="@drawable/ic_person">

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="MarongHappy"
            android:summary="@string/MarongHappy_summary"
            android:title="@string/MarongHappy"
            app:icon="@drawable/maronghappy"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_MarongHappy" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="Atalanttore"
            android:summary="@string/Atalanttore_summary"
            android:title="@string/Atalanttore"
            app:icon="@drawable/atalanttore"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_AxusWizix" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="gallegonovato"
            android:summary="@string/gallegonovato_summary"
            android:title="@string/gallegonovato"
            app:icon="@drawable/ersen0"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_gallegonovato" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="Kefir2105"
            android:summary="@string/Kefir2105_summary"
            android:title="@string/Kefir2105"
            app:icon="@drawable/kefir2105"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_Kefir2105" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="rex07"
            android:summary="@string/rex07_summary"
            android:title="@string/rex07"
            app:icon="@drawable/rex07"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_rex07" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="shailendramaurya"
            android:summary="@string/shailendramaurya_summary"
            android:title="@string/shailendramaurya"
            app:icon="@drawable/shailendramaurya"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_shailendramaurya" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="iqb4lsp"
            android:summary="@string/iqb4lsp_summary"
            android:title="@string/iqb4lsp"
            app:icon="@drawable/ersen0"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_iqb4lsp" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="Master2050"
            android:summary="@string/Master2050_summary"
            android:title="@string/Master2050"
            app:icon="@drawable/ersen0"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_Master2050" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="bonbonboi"
            android:summary="@string/bonbonboi_summary"
            android:title="@string/bonbonboi"
            app:icon="@drawable/bonbonboi"
            app:widgetLayout="@layout/preference_right_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_bonbonboi" />

        </com.drnoob.datamonitor.core.base.Preference>

        <com.drnoob.datamonitor.core.base.Preference
            android:key="U1M450W"
            android:summary="@string/U1M450W_summary"
            android:title="@string/U1M450W"
            app:icon="@drawable/ic_person">

        </com.drnoob.datamonitor.core.base.Preference>

    </com.drnoob.datamonitor.core.base.PreferenceCategory>

</PreferenceScreen>