<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.drnoob.datamonitor.core.base.PreferenceCategory
        android:title="@string/settings_appearance"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false">

        <com.drnoob.datamonitor.core.base.SwitchPreferenceCompat
            android:icon="@drawable/ic_dark_mode"
            android:key="dark_mode_toggle"
            android:title="@string/settings_dark_mode"
            app:summary="@string/dark_mode_summary"
            android:defaultValue="false"/>

    </com.drnoob.datamonitor.core.base.PreferenceCategory>

    <com.drnoob.datamonitor.core.base.PreferenceCategory
        android:title="@string/settings_preferences"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false">
        <com.drnoob.datamonitor.core.base.Preference
            android:icon="@drawable/ic_language"
            android:key="language_picker"
            android:title="@string/settings_language"
            app:summary="@string/language_summary"
            android:widgetLayout="@layout/preference_right_arrow" />

    </com.drnoob.datamonitor.core.base.PreferenceCategory>

    <com.drnoob.datamonitor.core.base.PreferenceCategory
        android:title="@string/settings_general"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false">

        <com.drnoob.datamonitor.core.base.Preference
            android:title="@string/about"
            app:icon="@drawable/ic_about"
            android:key="about"
            app:summary="@string/about_summary"
            android:widgetLayout="@layout/preference_right_arrow" />

        <com.drnoob.datamonitor.core.base.Preference
            android:title="@string/license"
            app:icon="@drawable/ic_license"
            android:key="license"
            app:summary="View app licenses"
            android:widgetLayout="@layout/preference_right_arrow" />

        <com.drnoob.datamonitor.core.base.Preference
            android:title="@string/contributors"
            app:icon="@drawable/ic_contributors"
            android:key="contributors"
            app:summary="@string/contributors_summary"
            android:widgetLayout="@layout/preference_right_arrow" />

        <com.drnoob.datamonitor.core.base.Preference
            android:title="@string/donate"
            app:icon="@drawable/ic_donate"
            android:key="donate"
            app:summary="@string/donate_summary"
            android:fragment="com.drnoob.datamonitor.ui.fragments.SetupFragment"
            android:widgetLayout="@layout/preference_right_arrow" />

    </com.drnoob.datamonitor.core.base.PreferenceCategory>

</PreferenceScreen>